# ESP32-Node-Camera

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
lib/camera_lib/: CMakeLists.txt  camera_lib.c  camera_lib.h
lib/client_cfg/: CMakeLists.txt  client_cfg.c  client_cfg.h
lib/dht11/: dht11.c  dht11.h
lib/event_lib/: shared.c  shared.h
lib/light_sensor/: CMakeLists.txt  light_sen.c  light_sen.h
lib/moisture/: CMakeLists.txt  mois.c  mois.h
lib/mqtt_cfg/: CMakeLists.txt  mqtt_cfg.c  mqtt_cfg.h
lib/nvs_storage/: CMakeLists.txt  nvs_storage.c  nvs_storage.h
lib/server_cfg/: CMakeLists.txt  server_cfg.c  server_cfg.h
lib/wifi_pro/: wifi_pro.c
main/: main.c
